--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.1",
+    "@types/validator": "^13.1.3",
     "husky": "^5.2.0",
     "size-limit": "^4.10.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "validator": "^13.5.2"
   }
 }
