--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
+    "publish": "npm publish --access=public",
     "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
