--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "validator": "^13.5.2"
+    "zod": "^1.11.13"
   },
   "files": [
     "dist",
