--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "size-limit": "^4.10.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "daruk": "^2.3.1"
   },
   "dependencies": {
     "zod": "^1.11.13"
