--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "decorator-validator",
   "author": "myywlc <myywlc@163.com>",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "module": "dist/decorator-validator.esm.js",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -20,12 +20,12 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.1",
     "@types/validator": "^13.1.3",
+    "daruk": "^2.3.1",
     "husky": "^5.2.0",
     "size-limit": "^4.10.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.3",
-    "daruk": "^2.3.1"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "zod": "^1.11.13"
